[package]
name = "tozny_auth"
description = "Rust interface to the Tozny authentication service"
version = "1.1.0"
authors = [ "Jesse Hallett <jesse@galois.com>" ]
documentation = "https://tozny.github.io/sdk-rust/tozny_auth/"
homepage = "https://github.com/tozny/sdk-rust"
repository = "https://github.com/tozny/sdk-rust.git"
readme = "README.md"
keywords = ["tozny", "authentication", "2FA"]
license = "MIT"

[lib]
name = "tozny_auth"

[dependencies]
chrono          = "~0.2.1"
hyper           = "~0.3.0"
rand            = "~0.2.1"
rust-crypto     = "~0.2.15"
rustc-serialize = "~0.3.1"
url             = "~0.2.18"
